Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.3.0
-
None
-
DB: random_nested_db_0
Machine: vd0206.halxg.cloudera.com:33333
Description
Query:
SELECT LAG(-180, 13) OVER (ORDER BY t4.key ASC, t1.field_48.field_51 ASC) AS int_col FROM table_1 t1 INNER JOIN t1.field_40 t2 INNER JOIN t1.field_40 t3 LEFT JOIN t1.field_40 t4 ON (((t4.key) = (t1.field_48.field_53)) AND ((t4.key) = (t3.key))) AND ((t4.key) = (t3.key))
Stack Trace:
#0 0x00007f12f1a46cc9 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56 #1 0x00007f12f1a4a0d8 in __GI_abort () at abort.c:89 #2 0x0000000002116799 in google::DumpStackTraceAndExit () at src/utilities.cc:147 #3 0x000000000210f84d in google::LogMessage::Fail () at src/logging.cc:1315 #4 0x00000000021116d5 in google::LogMessage::SendToLog (this=0x7f123d38fb90) at src/logging.cc:1269 #5 0x000000000210f3a3 in google::LogMessage::Flush (this=this@entry=0x7f123d38fb90) at src/logging.cc:1138 #6 0x000000000211202e in google::LogMessageFatal::~LogMessageFatal (this=0x7f123d38fb90, __in_chrg=<optimized out>) at src/logging.cc:1836 #7 0x00000000017257e6 in impala::Sorter::Run::Init (this=0xcdd6700) at /home/dev/Impala/be/src/runtime/sorter.cc:359 #8 0x000000000172acc8 in impala::Sorter::MergeIntermediateRuns (this=0xea80000) at /home/dev/Impala/be/src/runtime/sorter.cc:1150 #9 0x0000000001729fd6 in impala::Sorter::InputDone (this=0xea80000) at /home/dev/Impala/be/src/runtime/sorter.cc:1042 #10 0x00000000016cd656 in impala::SortNode::SortInput (this=0xdb0d000, state=0x84bc900) at /home/dev/Impala/be/src/exec/sort-node.cc:160 #11 0x00000000016cc9a7 in impala::SortNode::Open (this=0xdb0d000, state=0x84bc900) at /home/dev/Impala/be/src/exec/sort-node.cc:76 #12 0x0000000001597bf3 in impala::PlanFragmentExecutor::OpenInternal (this=0xd0cd828) at /home/dev/Impala/be/src/runtime/plan-fragment-executor.cc:334 #13 0x00000000015979f8 in impala::PlanFragmentExecutor::Open (this=0xd0cd828) at /home/dev/Impala/be/src/runtime/plan-fragment-executor.cc:320 #14 0x000000000137d290 in impala::FragmentMgr::FragmentExecState::Exec (this=0xd0cd600) at /home/dev/Impala/be/src/service/fragment-exec-state.cc:50 #15 0x0000000001375dcf in impala::FragmentMgr::FragmentExecThread (this=0xcaeae40, exec_state=0xd0cd600) at /home/dev/Impala/be/src/service/fragment-mgr.cc:70 #16 0x00000000013795da in boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>::operator() (this=0xf8a2c20, p=0xcaeae40, a1=0xd0cd600) at /usr/include/boost/bind/mem_fn_template.hpp:165 #17 0x000000000137939d in boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> >::operator()<boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list0> (this=0xf8a2c30, f=..., a=...) at /usr/include/boost/bind/bind.hpp:313 #18 0x0000000001378cb7 in boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> > >::operator() (this=0xf8a2c20) at /usr/include/boost/bind/bind_template.hpp:20 #19 0x000000000137860c in boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> > >, void>::invoke (function_obj_ptr=...) at /usr/include/boost/function/function_template.hpp:153 #20 0x00000000012479d8 in boost::function0<void>::operator() (this=0x7f123d390e00) at /usr/include/boost/function/function_template.hpp:767 #21 0x0000000001457233 in impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*) (name=..., category=..., functor=..., thread_started=0x7f123dc10ea0) at /home/dev/Impala/be/src/util/thread.cc:314 #22 0x0000000001460469 in boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>*> >::operator()<void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list0>(boost::_bi::type<void>, void (*&)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list0&, int) (this=0xdb0d3c0, f=@0xdb0d3b8: 0x1456f2a <impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*)>, a=...) at /usr/include/boost/bind/bind.hpp:457 #23 0x00000000014603b3 in boost::_bi::bind_t<void, void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>*> > >::operator()() (this=0xdb0d3b8) at /usr/include/boost/bind/bind_template.hpp:20 #24 0x0000000001460378 in boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>*> > > >::run() (this=0xdb0d200) at /usr/include/boost/thread/detail/thread.hpp:117 #25 0x00007f12f4a10a4a in ?? () from /usr/lib/x86_64-linux-gnu/libboost_thread.so.1.54.0 #26 0x00007f12f3ebd182 in start_thread (arg=0x7f123d391700) at pthread_create.c:312 #27 0x00007f12f1b0a47d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111
impalad.FATAL:
F0918 13:05:39.818377 26950 sorter.cc:359] Check failed: block != __null
Steps to reproduce:
ssh dev@vd0206.halxg.cloudera.com -p 33333 (pw: cloudera) run-all.sh && start-impala-cluster.py && impala-shell.sh; use random_nested_db_0; Core dumps are saved to /tmp/core_files on the machine
Attachments
Issue Links
- is related to
-
IMPALA-1590 Remove workarounds for DCHECK in sorter.cc:549 (var_len_blocks[0]->Pin() fails to pin), when running parallel test
- Resolved